Fixed spelling errors. Added recipes for Chicken Fajita and Eggnog along with images.

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -17,7 +17,7 @@
         <li>14 ounce jar spaghetti sauce</li>
         <li>14 ounce can diced tomatoes</li>
         <li>Half onion, chopped</li>
-        <li>1 clove garlic, minces</li>
+        <li>1 clove garlic, minced</li>
         <li>12 teaspoons dried basil</li>
         <li>2 teaspoons dried oregano</li>
         <li>1 teaspoon salt</li>
@@ -33,5 +33,6 @@
         <li>Set an oven rack about 6 inches from the heat source and preheat the oven's broiler.</li>
         <li>Place skillet under the hot broil and cook until cheese is golden and bubbly, 3 to 5 minutes.</li>
     </ol>
+    <a href="../index.html">Return Home</a>
 </body>
 </html>
