Added recipe links to homepage.

--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
 <body>
     <h1>Odin Recipes</h1>
     <a href="recipes/lasagna.html">Skillet Lasagna Recipe</a>
+    <a href="recipes/sheet_pan_chicken_fajitas.html">Sheet Pan Chicken Fajitas Recipe</a>
+    <a href="recipes/eggnog.html">Eggnog Recipe</a>
 </body>
 </html>
