--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/lasagna.html">Skillet Lasagna Recipe</a>
-    <a href="recipes/sheet_pan_chicken_fajitas.html">Sheet Pan Chicken Fajitas Recipe</a>
-    <a href="recipes/eggnog.html">Eggnog Recipe</a>
+    <h3><a href="recipes/lasagna.html">Skillet Lasagna Recipe</a></h3>
+    <h3><a href="recipes/sheet_pan_chicken_fajitas.html">Sheet Pan Chicken Fajitas Recipe</a></h3>
+    <h3><a href="recipes/eggnog.html">Eggnog Recipe</a></h3>
 </body>
 </html>
