--- a/recipes/eggnog.html
+++ b/recipes/eggnog.html
@@ -10,7 +10,7 @@
     <h1>Eggnog</h1>
     <img src="../images/eggnog.jpg" alt="Glass of Eggnog">
     <h2>Description</h2>
-    <p>As long as you have eggs, sigar, milk, and cream in the fridge, you can have eggnog anytime the craving hits.</p>
+    <p>As long as you have eggs, sugar, milk, and cream in the fridge, you can have eggnog anytime the craving hits.</p>
     <h3>Ingredients</h3>
     <ul>
         <li>6 large eggs</li>
